<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.admin.w2d5_test01.ReadActivity">
    <TextView
        android:text="@string/lbl_activity_read"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_Read_Read"
        android:text="@string/lbl_btn_read_all_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_result_read"
        android:hint="@string/lbl_tv_result_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
